# StudyFlow

./: .gitignore  BUILD.md  BUILD_DESKTOP.md  DESCRIPTION.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ClockWidget.tsx  FocusMode.tsx  PomodoroWidget.tsx  ScheduleWidget.tsx  SettingsPanel.tsx  SystemStatusWidget.tsx  TodoWidget.tsx  Widget.tsx
src/hooks/: useAnimation.ts
src/store/: index.ts
src/types/: index.ts
